test/files/neg/t556.check
t556.scala:3: error: wrong number of parameters; expected = 1
  def g:Int = f((x,y)=>x)
                     ^
one error found
